--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div id="enemyBackground">
                     
                     <div id="enemies">
-                        <div id="enememyPortrait"></div>
-                        <div class="hpBar"></div>
+                        <div id="enemyPortrait"></div>
+                        <div id="enemyHpBar" class="hpBar"></div>
                     </div>  
                     <div id="enemyForeground"></div>
                 </div>
