changing characters and variable damage

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         <div id="topbar">
             <div id="counterPane"></div>
         </div>
+        <div id="middlebar" >
             <div id="battlefield">
                 <div id="characters">
-                    <div id="character-1" class="characterPortrait"></div>
-                    <div id="character-2" class="characterPortrait"></div>
-                    <div id="character-3" class="characterPortrait"></div>
-                    <div id="character-4" class="characterPortrait"></div>
+                    <div id="characterright" class="characterPortrait"></div>
+                    <div id="charactertop" class="characterPortrait"></div>
+                    <div id="characterbottom" class="characterPortrait"></div>
+                    <div id="characterleft" class="characterPortrait"></div>
                 </div>    
-                <div class="hpBar" id="friendlyHPbar"></div>
+<!--                <div class="hpBar" id="friendlyHPbar"></div>-->
                 <div id="enemyBackground">
                     
                     <div id="enemies">
@@ -26,6 +27,7 @@
                 </div>
                 
             </div>
+        </div>    
         <div id="bottombar"></div>
     </body> 
     <script>
