Added increasing HP, HPbar text, kill and currency tracking, html buttons, some resizing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <body>
         <div id="topbar">
             <div id="counterPane"></div>
+            <div id="buyingpane">
+                <div id="tavernbutton" class="optionbutton">Tavern</div>
+                <div id="alchemistbutton" class="optionbutton">Alchemist</div>
+                <div id="storebutton" class="optionbutton">Store</div>
+            </div>
+            <div id="optionresultspane"></div>
+            <div id="optionspane"></div>
         </div>
         <div id="middlebar" >
             <div id="battlefield">
@@ -16,12 +23,14 @@
                     <div id="characterbottom" class="characterPortrait"></div>
                     <div id="characterleft" class="characterPortrait"></div>
                 </div>    
-<!--                <div class="hpBar" id="friendlyHPbar"></div>-->
                 <div id="enemyBackground">
                     
                     <div id="enemies">
                         <div id="enemyPortrait"></div>
-                        <div id="enemyHpBar" class="hpBar"></div>
+                        <div id="enemyhpbararea">
+                            <div id="enemyHpBar" class="hpBar"></div>
+                            <div id="enemyhpbartext"></div>
+                        </div>
                     </div>  
                     <div id="enemyForeground"></div>
                 </div>
