--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
     <head>
+        <script src="items.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
