--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                 <div id="alchemistbutton" class="optionbutton">Alchemist</div>
                 <div id="storebutton" class="optionbutton">Store</div>
             </div>
-            <div id="optionresultspane"></div>
+            <div id="buyingresultspane">
+<!--                <div class="showcaseButton"></div><div class="showcaseButton"></div><div class="showcaseButton"></div><div class="showcaseButton"></div>-->
+<!--                <div class="tooltip">text<br/> mor text</div>-->
+            </div>
             <div id="optionspane"></div>
         </div>
         <div id="middlebar" >
